# Arcade

./: .gitignore  CMakeLists.txt  IDisplayModule.hpp  IGameModule.hpp  IObject.cpp  IObject.hpp  Input.hpp  Makefile  README.md  arcade.txt  archi.puml  main.cpp  score.txt  user.txt
.github/: notion.py
.github/workflows/: actions.yml
core/: Core.cpp  Core.hpp  DLLoader.hpp  Score.cpp  Score.hpp
librairies/gametest/: test.hpp
librairies/libtest/: Makefile  test.cpp  test.hpp
libraries/SDL2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
libraries/SFML/: CMakeLists.txt  Makefile  sfml.cpp  sfml.hpp
libraries/SFML3D/: CMakeLists.txt  sfml3d.cpp  sfml3d.hpp
libraries/gametest/: CMakeLists.txt  Makefile  test.cpp  test.hpp
libraries/libtest/: CMakeLists.txt  Makefile  test.cpp  test.hpp
libraries/menu/: CMakeLists.txt  menu.cpp  menu.hpp
libraries/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
libraries/nibbler/: CMakeLists.txt  nibbler.cpp  nibbler.hpp
libraries/sdl2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
libraries/sfml/: CMakeLists.txt  sfml.cpp  sfml.hpp
libraries/snake/: CMakeLists.txt  snake.cpp  snake.hpp
rule/: FindSDL2TTF.cmake
tests/: core.cpp  menu.cpp
