CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(arcade)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -g3")


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
ADD_EXECUTABLE(arcade main.cpp core/Core.cpp)
TARGET_LINK_LIBRARIES(arcade dl)

ADD_SUBDIRECTORY(libraries/gametest)
ADD_SUBDIRECTORY(libraries/libtest)
ADD_SUBDIRECTORY(libraries/snake)
ADD_SUBDIRECTORY(libraries/SFML)
ADD_SUBDIRECTORY(libraries/SDL2)
ADD_SUBDIRECTORY(libraries/ncurses)


ADD_DEPENDENCIES(arcade arcade_gametest)
ADD_DEPENDENCIES(arcade arcade_libtest)
ADD_DEPENDENCIES(arcade arcade_snake)
ADD_DEPENDENCIES(arcade arcade_SFML)
ADD_DEPENDENCIES(arcade arcade_SDL2)
ADD_DEPENDENCIES(arcade arcade_ncurses)

SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "lib")

