CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(arcade)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/rule")
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -g3")


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
ADD_EXECUTABLE(arcade main.cpp core/Core.cpp core/Score.cpp)
TARGET_LINK_LIBRARIES(arcade dl)

ADD_SUBDIRECTORY(libraries/sfml)
ADD_SUBDIRECTORY(libraries/SFML3D)
ADD_SUBDIRECTORY(libraries/sdl2)
ADD_SUBDIRECTORY(libraries/ncurses)
ADD_SUBDIRECTORY(libraries/menu)
ADD_SUBDIRECTORY(libraries/snake)
ADD_SUBDIRECTORY(libraries/nibbler)

ADD_DEPENDENCIES(arcade arcade_sfml)
ADD_DEPENDENCIES(arcade arcade_SFML3D)
ADD_DEPENDENCIES(arcade arcade_sdl2)
ADD_DEPENDENCIES(arcade arcade_ncurses)
ADD_DEPENDENCIES(arcade arcade_menu)
ADD_DEPENDENCIES(arcade arcade_snake)
ADD_DEPENDENCIES(arcade arcade_nibbler)

SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "lib")

add_custom_command(TARGET arcade POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy
        $<TARGET_FILE:arcade>
        ${PROJECT_SOURCE_DIR}/$<TARGET_FILE_NAME:arcade>)
