CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

find_package(SDL2 REQUIRED)
find_package(SDL_ttf REQUIRED)

add_library(arcade_SDL2 SHARED sdl2.cpp)

target_include_directories(arcade_SDL2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(arcade_SDL2 ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES})